--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.9.1+31
+version: 2.9.2+33
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -65,6 +65,9 @@ dependencies:
   audioplayers: ^0.16.0
   device_info: ^1.0.0
   pull_to_refresh: 1.6.2
+  visibility_detector: ^0.1.5
+  collection: ^1.14.11
+  mailer: ^3.3.0
   package_info:
 
   video_compress: ^2.1.0
